--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -90,6 +90,8 @@ en:
       actions: "Actions"
 
   shared:
+    app_nav:
+      name: "TestGuru"
     admin_nav:
       name: "Guru"
       message: "Admin panel"
