--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -101,6 +101,7 @@ en:
         password: 'Password'
         remember_me: 'Remember me'
         enter: "Enter the Guru Gates"
+        message: "Enter email"
       signed_in: "Signed in successfully."
       signed_out: "Signed out successfully."
       already_signed_out: "Signed out successfully."
