--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -80,6 +80,7 @@ ru:
         password: 'Пароль'
         remember_me: "Запомнить меня"
         enter: "Войдите во врата Гуру"
+        message: "Введите адрес электронной почты"
       signed_in: "Вход в систему выполнен."
       signed_out: "Выход из системы выполнен."
       already_signed_out: "Выход из системы выполнен."
