--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -53,6 +53,12 @@ en:
         new_question: "Create question"
         questions: "Questions list"
         edit_test: "Edit test"
+    gists:
+      index:
+        header: "Created gists"
+        question: "Question"
+        url: "Gist url"
+        email: "User email"
 
   helpers:
     submit:
@@ -117,6 +123,15 @@ en:
       question_num: "Question № "
       from: " from"
       next: "Next"
+      gist: "Gist Question"
+    gist:
+      success: "Gist was successfully created!"
+      failure: "An error occurred while saving gist"
+      view_gist: "View Gist on GitHub"
+
+  services:
+    gist_question_service:
+      message: "A question from test %{title} TestGuru"
 
   
 
