--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -94,6 +94,7 @@ en:
       header: "Tricky tests"
       title: "Title"
       level: "Level"
+      category: "Category"
       quest_count: "Questions count"
       actions: "Actions"
 
