--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -94,6 +94,7 @@ ru:
       header: "Доступные тесты"
       title: "Название теста"
       level: "Уровень"
+      category: "Категория"
       quest_count: "Количество вопросов"
       actions: "Действия"
 
