--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -138,6 +138,17 @@ ru:
   services:
     gist_question_service:
       message: "Вопрос из теста %{title} TestGuru"
+
+  feedbacks:
+    new:
+      header: "Написать сообщение администрации сайта"
+    create:
+      success: "Ваше сообщение отправлено администрации"
+      failure: "Сообщение не отправлено. Во время отправки произошла ошибка"
+    form:
+      email: "Ваш адрес электронной почты"
+      feedback: "Ваше сообщение"
+      submit: "Отправить"    
       
   
 
