--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -55,6 +55,7 @@ ru:
         edit_test: "Редактировать тест"
         message: "Необходимо создать вопрос"
         readiness: "Готовность"
+        timer: "Таймер"
       form_inline:
         submit: "Ok"
     gists:
@@ -153,6 +154,7 @@ ru:
       next: "Далее"
       gist: "Gist Вопрос"
       progress_bar: "Процент прохождения теста: "
+      time_left: "Время до окончания теста:"
     gist:
       success: "Gist успешно сохранен"
       failure: "Во время сохранения gist произошла ошибка"
